openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: art-build-failures
    app.kubernetes.io/component: art-build-failures
    app.kubernetes.io/instance: art-build-failures
  name: art-build-failures
spec:
  port:
    targetPort: 8080
  tls:
    termination: edge
  to:
    kind: Service
    name: art-build-failures
    weight: 100
  wildcardPolicy: None
